# tstd

./: Cargo.toml  PKGBUILD
.github/workflows/: release.yaml
src/: main.rs
